--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                                 <div class="bottom">
                                     <div><p class="cost">@item.Price $</p></div>
                                     <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                                 </div>
                             </a>
                         }
@@ -113,7 +113,7 @@
                                         <div><p class="cost">@item.Price $</p></div>
                                     }
                                     <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                                 </div>
                             </a>
                         }
@@ -208,7 +208,7 @@
                             <div class="bottom">
                                 <div><p class="cost">@item.Price $</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                             </div>
                         </a>
                     </li>
@@ -255,7 +255,7 @@
                             <div class="bottom">
                                 <div><p class="cost">@item.Price $</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                             </div>
                         </a>
                     </li>
@@ -301,7 +301,7 @@
                             <div class="bottom">
                                 <div><p class="cost">@item.Price $</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                             </div>
                         </a>
                     </li>
