--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -39,7 +39,7 @@
                         <div class="bottom">
                             <div><p class="cost">@item.Price $</p></div>
                             <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         </div>
                     </a>
                 }
@@ -82,7 +82,7 @@
                                 <div><p class="cost">@item.Price $</p></div>
                             }
                             <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         </div>
                     </a>
                 }
