--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -38,7 +38,7 @@
                     <div class="bottom">
                         <div><p class="cost">от @item.Price грн/м²</p></div>
                         <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                        <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                        <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                     </div>
                 </a>
             </li>
