--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -71,6 +71,11 @@
                                     <div><p class="cost">@item.Price $</p></div>
                                     <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                     <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                    <div class="shared_icons">
+                                        <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))" )" class="fb"></a>
+                                        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                                        <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street')" class="tw"></a>
+                                    </div>
                                 </div>
                             </a>
                         }
@@ -114,6 +119,11 @@
                                     }
                                     <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                     <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                    <div class="shared_icons">
+                                        <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Сдам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))" )" class="fb"></a>
+                                        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Сдам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                                        <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Сдам @item.Title.RussianName, @item.Street')" class="tw"></a>
+                                    </div>
                                 </div>
                             </a>
                         }
@@ -162,6 +172,11 @@
                                 <div><p class="cost">от @item.Price грн/м²</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                 <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="shared_icons">
+                                    <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))" )" class="fb"></a>
+                                    <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                                    <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress')" class="tw"></a>
+                                </div>
                             </div>
                         </a>
                     </li>
@@ -209,6 +224,11 @@
                                 <div><p class="cost">@item.Price $</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="shared_icons">
+                                    <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))" )" class="fb"></a>
+                                    <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                                    <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street')" class="tw"></a>
+                                </div>
                             </div>
                         </a>
                     </li>
@@ -256,6 +276,11 @@
                                 <div><p class="cost">@item.Price $</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="shared_icons">
+                                    <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))" )" class="fb"></a>
+                                    <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                                    <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street')" class="tw"></a>
+                                </div>
                             </div>
                         </a>
                     </li>
@@ -300,9 +325,14 @@
                             </div>
                             <div class="bottom">
                                 <div><p class="cost">@item.Price $</p></div>
-                                <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                                <div class="share" onclick="share(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
-                            </div>
+                                <div class="shared_icons">
+                                    <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))")" class="fb"></a>
+                                    <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                                    <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street')" class="tw"></a>
+                                </div>
+                            </div>                            
                         </a>
                     </li>
                 }
