--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -740,9 +740,14 @@ opacity: .1;}}
     margin-left: 224px;
     margin-top: 100px;
 }
-
 .d-carousel a {
     text-decoration:none;
+}
+
+.d-carousel .bottom a {
+    text-decoration:none;
+    display:flex;
+    flex-direction:row;
 }
 .d-carousel ul li .meters {
     display:flex;
