--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -3275,7 +3275,7 @@ body a, p, button {
 
 
 .shared_icons {
-        display: flex;
+        display: none;
     flex-direction: row;
     position: absolute;
     height: 30px;
@@ -3289,7 +3289,7 @@ body a, p, button {
     display:block;
     width:30px;
     height:30px;
-    margin-right:9px;        
+    margin-right:9px;      
 }
 
 
