--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -37,7 +37,7 @@
                     </div>
                     <div class="bottom">
                         <div><p class="cost">от @item.Price грн/м²</p></div>
-                        <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                        <div class="share" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                         <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         <div class="shared_icons">
                             <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))" )" class="fb"></a>
