--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -738,7 +738,7 @@ opacity: .1;}}
     position: absolute;
     z-index: 10000;
     margin-left: 224px;
-    margin-top: 100px;
+    margin-top: 70px;
 }
 .d-carousel a {
     text-decoration:none;
@@ -768,7 +768,9 @@ opacity: .1;}}
     display:flex;
     flex-direction:row;
         position: absolute;
-    bottom: 0;
+    top: 367px;
+    width:391px;
+        border-top: 1px solid #e5e5f8;
 }
 }
     .d-carousel ul li .bottom div {
@@ -784,22 +786,42 @@ opacity: .1;}}
         width:229px;
          border: 1px solid #e5e5f8;
         border-right:none;
+        border-top:none;
     }
     .d-carousel ul li .bottom .share {
         padding:18px;
          border: 1px solid #e5e5f8;
          border-right:none;
+         border-top:none;
+         position:absolute;
+         right:69px;
     }
+    
 .d-carousel ul li .bottom .like {
-        padding:18px;
-         border: 1px solid #e5e5f8;
-         border-right:none;
+        padding: 36px;
+    border: 1px solid #e5e5f8;
+    border-right: none;
+    right: 0;
+    position: absolute;
+    border-top: none;
+    background-image: url(images/star.png);
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    background-position: 50%;
     }
 .d-carousel ul li .bottom .liked {
-        padding:18px;
-         border: 1px solid #e5e5f8;
-         border-right:none;
+      padding: 36px;
+    border: 1px solid #e5e5f8;
+    border-right: none;
+    right: 0;
+    position: absolute;
+    border-top: none;
+    background-image: url(images/star-h.png);
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    background-position: 50%;
     }
+
     .d-carousel ul li .meters p {
         color: #020107;
         font-family: "ProximaNova";
@@ -3275,15 +3297,17 @@ body a, p, button {
 
 
 .shared_icons {
-        display: none;
+         display: none;
     flex-direction: row;
     position: absolute;
     height: 30px;
-  top: 23px;
+    top: 23px;
     z-index: 1000000000000;
-    /* left: -10px; */
+    /* left: -13px; */
     justify-content: space-between;
-    margin-left: 97px;
+    margin-left: 78px;
+    /* border-top: 1px solid #e5e5f8; */
+    /* padding: 10px 0; */
 }
 .shared_icons a {
     display:block;
