--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
                                 <div class="bottom">
                                     <div><p class="cost">@item.Price $</p></div>
                                     <div class="share" tabindex="0" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"></div>
                                     <div class="shared_icons">
                                         <a onclick="Share.facebook('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))'" class="fb"></a>
                                         <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/rent/detail/@(item.Id)', 'Продам @item.Title.RussianName, @item.Street', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
